# mariadb-server

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.compiler.sh  .travis.yml  CMakeLists.txt  CODING_STANDARDS.md  COMMUNITY_CONTRIBUTIONS.md  CONTRIBUTING.md  CREDITS  INSTALL-SOURCE  INSTALL-WIN-SOURCE  KNOWN_BUGS.txt  README.md  VERSION  appveyor.yml  build.sh  config.h.cmake  configure.cmake  delta_appender.cc  duckdb_context.cc  duckdb_error.h  ha_duckdb.h  ha_duckdb_pushdown.cc
client/: CMakeLists.txt  mysqlbinlog.cc  mysqlcheck.c  mysqldump.c  mysqldump.cc  mysqltest.cc
cmake/: 3rdparty_info.cmake  build_depends.cmake  cpack_rpm.cmake  do_abi_check.cmake  duckdb.cmake  duckdb_target_setup.cmake  generate_sbom.cmake  libfmt.cmake  libutils.cmake  mariadb_connector_c.cmake  merge_archives_unix.cmake  mysql_version.cmake  pcre.cmake  plugin.cmake  readline.cmake  ssl.cmake  submodules.cmake  win_compatibility.manifest  wsrep.cmake  zlib.cmake
common/: CMakeLists.txt  duckdb_error.h  duckdb_handler_errors.h  duckdb_log.cc  duckdb_log.h  duckdb_timezone.h
convertor/: CMakeLists.txt  duckdb_select.h
debian/: autobake-deb.sh  control  mariadb-client.install  mariadb-server-10.7.install  mariadb-server-10.7.postinst  mariadb-server.README.Debian  mariadb-server.mysql.default  not-installed  rules
extra/: CMakeLists.txt  comp_err.c  generate_option_list.cc  innochecksum.cc  mariadb_migrate_config_file.c
include/: json_lib.h  m_string.h  ma_dyncol.h  my_atomic_wrapper.h  my_global.h  my_service_manager.h  my_sys.h  ssl_compat.h  thr_lock.h  violite.h
libmysqld/: CMakeLists.txt
man/: galera_new_cluster.1  mariadb-binlog.1  mysqlbinlog.1  mysqlcheck.1
mysql-test/: README  lsan.supp  mariadb-test-run.pl  mysql-test-run.pl
mysys/: CMakeLists.txt  lf_hash.cc  my_getopt.c  my_largepage.c  my_largepage.cc  my_malloc.c  my_setuser.c  my_winfile.cc
plugin/clevis_key_management/: CMakeLists.txt  clevis_key_management_plugin.cc
runtime/: CMakeLists.txt  cross_engine_scan.cc  cross_engine_scan.h  delta_appender.h  duckdb_manager.h  duckdb_query.h  fiber_context_test  fiber_scan.cc  fiber_scan.h
storage/duckdb/: CLAUDE.md  CMakeLists.txt  README.md  build.sh  duckdb.cnf  duckdb_errors.txt  duckdb_udf.cc  ha_duckdb.cc  ha_duckdb.h  ha_duckdb_pushdown.cc  ha_duckdb_pushdown.h  run_mtr.sh  utils.sh
storage/duckdb/cmake/: cpack_overrides.cmake  duckdb.cmake  duckdb_errors.cmake  duckdb_extensions.cmake  duckdb_target_setup.cmake  gen_duckdb_error_h.cmake
storage/duckdb/common/: CMakeLists.txt  duckdb_charset_collation.cc  duckdb_charset_collation.h  duckdb_config.h  duckdb_timezone.cc  duckdb_types.cc  duckdb_types.h  row_helpers.h
storage/duckdb/convertor/: CMakeLists.txt  ddl_convertor.cc  ddl_convertor.h  dml_convertor.cc  dml_convertor.h  duckdb_select.cc
storage/duckdb/debian/: control  mariadb-plugin-duckdb.install  mariadb-plugin-duckdb.postinst  mariadb-plugin-duckdb.prerm
storage/duckdb/docs/: collation-mapping.md  disabled-tests-plan.md  ingestion-memory-limits.md  mariadb-duckdb-incompatibilities.md  security-model.md  tpch_sf10_ingestion_benchmark.md  tpch_sf10_query_benchmark.md
storage/duckdb/mysql-test/duckdb/: my.cnf  my.cnf.broken  suite.opt
storage/duckdb/mysql-test/duckdb/include/: alter_duckdb_column.inc  alter_duckdb_index.inc  check_field_correctness.inc  cleanup_duckdb_udf.inc  decimal_precision_all_possibilities.inc  have_duckdb.inc  have_duckdb_udf.inc  have_mysqld_safe.inc  show_duckdb_table_structure.inc  transaction_basic.inc
storage/duckdb/mysql-test/duckdb/r/: alter_duckdb_column.result  alter_duckdb_column_copy.result  alter_duckdb_index.result  charset_and_collation.result  create_table_column.result  create_table_constraint.result  cross_engine_join.result  cross_engine_union.result  cross_engine_where.result  decimal_high_precision.result  dml_delete.result  dml_update.result  drop_database.result  duckdb_appender_allocator_flush_threshold.result  duckdb_collate.result  duckdb_cte.result  duckdb_db_table_strconvert.result  duckdb_monitor.result  duckdb_require_primary_key.result  duckdb_sql_syntax.result  duckdb_string_func.result  feature_duckdb_data_type.result  ha_duckdb.result  pushdown_rewrite.result  rename_duckdb_table.result  transaction.result  truncate_and_maintenance_duckdb_table.result
storage/duckdb/mysql-test/duckdb/t/: alter_default_debug.test  alter_duckdb_column.test  alter_duckdb_column_copy-master.opt  alter_duckdb_column_copy.test  alter_duckdb_index.test  alter_engine_duckdb.test  bugfix_crash_after_commit_error.test  bugfix_temp_and_system_database.test  charset_and_collation-master.opt  charset_and_collation.test  create_table_column-master.opt  create_table_column.test  create_table_column_timestamp-master.opt  create_table_column_timestamp.test  create_table_constraint.test  cross_engine_join-master.opt  cross_engine_join.test  cross_engine_union.test  cross_engine_where.test  decimal_high_precision.test  decimal_precision_all_possibilities.test  dml_delete.test  dml_update.test  drop_database.test  duckdb_add_backticks.test  duckdb_agg_func.test  duckdb_alter_table_engine.test  duckdb_appender_allocator_flush_threshold.test  duckdb_bit_string.test  duckdb_collate.test  duckdb_cte.test  duckdb_db_table_strconvert.test  duckdb_ddl_during_transaction.test  duckdb_fix_sql.test  duckdb_json.test  duckdb_kill.test  duckdb_monitor.test  duckdb_numeric_func.test  duckdb_refuse_xa.test  duckdb_require_primary_key.test  (+11 more)
storage/duckdb/runtime/: CMakeLists.txt  cross_engine_scan.cc  delta_appender.cc  duckdb_config.cc  duckdb_context.cc  duckdb_context.h  duckdb_manager.cc  duckdb_mysql_compat.cc  duckdb_mysql_compat.h  duckdb_query.cc  fiber_context.c  fiber_context.h  fiber_context_test.cc  fiber_scan.cc  fiber_scan.h
storage/duckdb/scripts/: install.sql  uninstall.sql
storage/duckdb/tpch/: 01_install.sh  02_generate.sh  03_schema.sh  04_load.sh  05_run_queries.sh  README.md  config.sh  run_all.sh  tpch.sql
tpool/: CMakeLists.txt  aio_libaio.cc  aio_liburing.cc
unittest/embedded/: CMakeLists.txt
(+616 files in other folders)
